--- a/Portfolio Website/assets/css/style.css
+++ b/Portfolio Website/assets/css/style.css
@@ -1880,3 +1880,102 @@ textarea.form-input::-webkit-resizer { display: none; }
   .timeline-text { max-width: 700px; }
 
 }
+
+
+/*Zoom in the pictures*/
+.myImg{
+  position: relative;
+  width: 100%;
+  height: 200px;
+  border-radius: 16px;
+  overflow: hidden;
+  margin-bottom: 15px;
+  /*
+  display: inline-block;
+  cursor: pointer;
+  width: 100px;
+  height: 100px;*/
+}
+/*
+ul li{
+  display: inline-block;
+  cursor: pointer;
+  width: 100px;
+  height: 100px;
+}
+ul li img{
+  width: 100%;
+  height: 100%;
+}*/
+#show_image_popup{
+  /*
+  width: 400px;
+  height: 400px;
+  border: 1px solid #333;
+  box-sizing: border-box;
+  padding: 5px;
+  text-align: center;
+  
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #100f0f;*/
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  background-size: contain;
+/*    */
+  
+}
+#show_image_popup img{
+ /* max-width: 80%;
+  height: auto;*/
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 1000px;
+}
+
+#all-images .active{
+  filter: blur(5px);
+}
+.close-btn-area{
+  width: 100%;
+  text-align: right;
+  margin-bottom: 10px;
+  
+}
+.close-btn-area button{
+  cursor: pointer;
+  background: #f7f7f7;
+  font-size: 40px;
+}
+
+
+
+/* ====================== */
+.video{
+  width: 300px;
+  margin: 0px auto;
+  text-align:center;
+}
+.video a{
+  display: inline-block;
+  margin: 10px 0px;
+  background: #333;
+  color: #fff;
+  padding: 8px 30px;
+  text-decoration: none;
+  border-radius: 30px;
+  
+  box-shadow: 0px 0px 4px 1px #333;
+}
