--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -584,6 +584,7 @@ main {
 .testimonials-item {
   min-width: 100%;
   scroll-snap-align: center;
+  
 }
 
 .testimonials-avatar-box {
@@ -670,6 +671,8 @@ main {
   opacity: 0;
   transition: var(--transition-1);
   z-index: 2;
+  max-height: 90vh;
+  overflow-y: auto;
 }
 
 .modal-container.active .testimonials-modal {
