--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -479,7 +479,8 @@ main {
 
 .navbar-link {
   color: var(--light-gray);
-  font-size: var(--fs-4);
+  font-size: var(--fs-2);
+  font-weight: bold;
   padding: 20px 7px;
   transition: color var(--transition-1);
 }
